src/assets/styles/index.scss
/* ... */
@media only screen and (min-width: 320px) and (max-width: 767px){
    body > #root{

        header {
            height: 40px;
            .company-name {
                font-size: 24px;
                margin-left: 5%;
            } 
            .nav-user {
                margin-right: 2%;
                font-size: 16px; 
                img {
                    width: 30px;
                    margin-right: 5px;
                    border-radius: 50%;
                }
            }
        }

        .main-container {
            .cover {
                height: 150px;
                .menu {
                    height: 50px;
                    bottom: -50px;
                    .menu-item {
                        font-size: 14px;
                        padding-top: 15px;
                        height: 50px;
                    }
                }
            }

            .row {
                .profile-content {
                    position: relative;
                    top: 100px;
                    .following {
                        .following-content {
                            .following-info {
                                .following-img {
                                    width: 10%;
                                }
                            }
                        }
                    }

                    .friends-container {
                        .friends {
                            img {
                                width: 15%;
                            }
                        }
                    }
                }

                .about-container {
                    top: 80px;
                    .row {
                        .about-content {
                            .about {
                                .basic-info {
                                    .content {
                                        font-size: 14px;
                                        padding: 10px;
                                    }
                                }
                            }

                            .photos-container {
                                .photo {
                                    margin-bottom: 10px;
                                }
                            }

                            .post-container {
                                &::before {
                                    left: -25px;
                                }
                                .post {
                                    .post-header {
                                        img {
                                            left: -44px;
                                        }
                                    }

                                    .button-container {
                                        padding: 3%;
                                        
                                        .button {
                                            padding: 0 2%px;
                                            font-size: 14px;
                                            &::after {
                                                content: '|';
                                                margin-left: 2%;
                                            }

                                            i {
                                                display: none;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }    
                }
            }            
        }
    }
}

